welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:22: error: not found: value ind
  return ind
         ^